--- a/SZ/zlib/Makefile
+++ b/SZ/zlib/Makefile
@@ -198,13 +198,13 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/qliu/DREvaluation/SZ/missing aclocal-1.13
+ACLOCAL = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/missing aclocal-1.13
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/qliu/DREvaluation/SZ/missing autoconf
-AUTOHEADER = ${SHELL} /home/qliu/DREvaluation/SZ/missing autoheader
-AUTOMAKE = ${SHELL} /home/qliu/DREvaluation/SZ/missing automake-1.13
+AUTOCONF = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/missing autoconf
+AUTOHEADER = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/missing autoheader
+AUTOMAKE = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/missing automake-1.13
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -222,8 +222,8 @@ ECHO_N = -n
 ECHO_T = 
 EGREP = /bin/grep -E
 EXEEXT = 
-FC = gfortran
-FCFLAGS = -g -O2
+FC = 
+FCFLAGS = 
 FGREP = /bin/grep -F
 GREP = /bin/grep
 INSTALL = /usr/bin/install -c
@@ -240,7 +240,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/qliu/DREvaluation/SZ/missing makeinfo
+MAKEINFO = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -263,14 +263,14 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = strip
 VERSION = 1.4
-abs_builddir = /home/qliu/DREvaluation/SZ/zlib
-abs_srcdir = /home/qliu/DREvaluation/SZ/zlib
-abs_top_builddir = /home/qliu/DREvaluation/SZ
-abs_top_srcdir = /home/qliu/DREvaluation/SZ
+abs_builddir = /home/jon/PhD_hpc/LossyCompressStudy/SZ/zlib
+abs_srcdir = /home/jon/PhD_hpc/LossyCompressStudy/SZ/zlib
+abs_top_builddir = /home/jon/PhD_hpc/LossyCompressStudy/SZ
+abs_top_srcdir = /home/jon/PhD_hpc/LossyCompressStudy/SZ
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
-ac_ct_FC = gfortran
+ac_ct_FC = 
 am__include = include
 am__leading_dot = .
 am__quote = 
@@ -296,7 +296,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/qliu/DREvaluation/SZ/install-sh
+install_sh = ${SHELL} /home/jon/PhD_hpc/LossyCompressStudy/SZ/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
