--- a/sz.config
+++ b/sz.config
@@ -56,6 +56,10 @@ gzipMode = Gzip_BEST_SPEED
 #errorBoundMode = REL
 errorBoundMode = PW_REL
 #errorBoundMode = ABS
+[Rutgers_ijobs] Renegeron Internship meeting tonight for Biostats student! - 1 Update
+FW: Hello NJIT Women EWNJ's Scholarship Application Portal Will Open on March 15th! - 1 Update
+2018 May Graduation - 1 Update
+
 
 #absolute Error Bound
 #absErrBound is to limit the (de)compression errors to be within an absolute error. For example, absErrBound=0.0001 means the decompressed value must be in [V-0.0001,V+0.0001], where V is the original true value.
