--- a/model_comparison/sz.config
+++ b/model_comparison/sz.config
@@ -21,8 +21,8 @@ sampleDistance = 100
 #The number of quantization intervals should be always set to an "even" number!
 #If it is set to 0, SZ will autamatically search for an optimized setting.
 #Otherwise, it has be to no less than 4 and no greater than 65536, such as 256.
-#quantization_intervals = 0
-quantization_intervals = 20000 #AStro YF17 Bump
+quantization_intervals = 0
+#quantization_intervals = 20000 #AStro YF17 Bump
 #quantization_intervals = 10000 #Fish
 #quantization_intervals = 65536 #Dpot Blast2 Eddy
 #quantization_intervals = 320 # Sedov
@@ -33,7 +33,7 @@ quantization_intervals = 20000 #AStro YF17 Bump
 #The high values of max_quant_intervals, the lower compression speed, but the higher ability the compressor can reach high compression ratios for high-precision compression.
 #As for low-precision compression (i.e., high error bound such as 1E-2), max_quant_intervals could be set to 256 or 65536.
 #As for pretty-high-precision demand (i.e., fairly small error bound such as 1E-6), max_quant_intervals could be set to 2097152(=2^21).
-#max_quant_intervals = 2097152
+max_quant_intervals = 2097152
 #max_quant_intervals = 262144
 #max_quant_intervals = 65536
 
